--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <body>
     <h1>AndrewPRohde on Github</h1>
     <img src="https://avatars3.githubusercontent.com/u/23230388?v=4">
-  Hello there, awesome person!
+    Hello there, awesome person!
+    <ul>
+      <li>Reddit</li>
+      <li>Github</li>
+      <li>CodeAcademy</li>
+    </ul>
   </body>
 </html>
