--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <img src="https://avatars3.githubusercontent.com/u/23230388?v=4">
     Hello there, awesome person!
     <ul>
-      <li>Reddit</li>
-      <li>Github</li>
-      <li>CodeAcademy</li>
+      <li><a href="https://www.reddit.com">Reddit</a></li>
+      <li><a href="https://www.github.com">Github</a></li>
+      <li><a href="www.codeacademy.com">CodeAcademy</a></li>
     </ul>
   </body>
 </html>
